tests/checker/bad/bad_lib_pm_import.scilla
scilla_version 0

import BadPMLib

library BadLibPM

contract BadLibPM()
